--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
 
-     <div class="refresh-indicator" id="refresh-indicator">Refreshing...</div>
+     <!--<div class="refresh-indicator" id="refresh-indicator">Refreshing...</div>-->
+     
     <header>
        
     </header>
