messed up again

--- a/view-details.html
+++ b/view-details.html
@@ -19,6 +19,46 @@
     </div>
     </section>
 
+
+    <div class="product-details" id="productDetails"></div>
+
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const productId = parseInt(urlParams.get('id'));
+      const product = products.find(p => p.id === productId);
+  
+      if (product) {
+        const productDetails = document.getElementById('productDetails');
+        productDetails.innerHTML = `
+          <img src="${products.image}" alt="${products.name}">
+          <h1>${products.name}</h1>
+          <p>${products.description}</p>
+          <p>$${products.dollar}</p>
+        `;
+      } else {
+        document.getElementById('productDetails').innerText = 'Product not found!';
+      }
+    </script>
+
+
+<script src="scripts/categories.js"></script>
+        <script type="module" src="scripts/farm.js"></script>
+        <script src="scripts/footer.js"></script>
+
 </body>
 
 </html>
+<!--
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Product Details</title>
+</head>
+<body>
+ 
+</body>
+</html>
+-->
