--- a/checkout.html
+++ b/checkout.html
@@ -19,8 +19,9 @@
           </div>
 
     <div class="checkout-header-middle-section">
-        Checkout (<a class="return-to-home-link"
-          href="index.html">3 items</a>)
+       <!-- Checkout (<a class="return-to-home-link cart-quantity js-cart-quantity cart-plus"
+          href="index.html">0 items</a>) -->
+          <div class="cart-quantity js-cart-quantity cart-plus">0</div> </a>
       </div>
 
   <div class="checkout-header-right-section">
