--- a/checkout.html
+++ b/checkout.html
@@ -19,9 +19,8 @@
           </div>
 
     <div class="checkout-header-middle-section">
-       <!-- Checkout (<a class="return-to-home-link cart-quantity js-cart-quantity cart-plus"
-          href="index.html">0 items</a>) -->
-          <div class="cart-quantity js-cart-quantity cart-plus">0</div> </a>
+        Checkout (<a class="return-to-home-link"
+          href="index.html">- items</a>)
       </div>
 
   <div class="checkout-header-right-section">
