--- a/checkout.html
+++ b/checkout.html
@@ -19,8 +19,8 @@
           </div>
 
     <div class="checkout-header-middle-section">
-        Checkout (<a class="return-to-home-link"
-          href="index.html">- items</a>)
+        Checkout (<a class="return-to-home-link js-return-to-home-link"
+          href="index.html"></a>)
       </div>
 
   <div class="checkout-header-right-section">
