--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero-text">
             <h1>Welcome to Your Farming Store</h1>
             <p>Discover our latest prodcts and offers</p>
-            <button class="btn2"><a href="products.html">Shop Now!<i class="fa  fa-shopping-cart"></i> &rarr;</a></button>
+            <a href="products.html"><button class="btn2">Shop Now!<i class="fa  fa-shopping-cart"></i> &rarr;</a></button></a>
         </div>
     </section>
 
