--- a/view-details.html
+++ b/view-details.html
@@ -9,17 +9,9 @@
 </head>
 
 <body>
-   <section class="hero">
-  <!-- 
-    <div class="hero-image">
-        <img src="images/LOGO-DAMBWE.svg" alt="hero-photo">
+   <div class="hero">
+    
     </div>
-  -->
-    <div class="hero-text">
-        <h1>Welcome to Your Farming Store</h1>
-        <p>Discover our latest prodcts and offers</p>
-    </div>
-    </section>
 
 
     <div class="product-details" id="productDetails"></div>
