--- a/indexer.html
+++ b/indexer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Storedambwe-logo-v-1.0-03.png" type="image/x-icon">
     <title>Store Dambwe | HOME</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
