--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@
         <div class="header-content">
           <div class="checkout-header-left-section">
             <a href="index.html">
-              <img class="dambwe-logo" src="images/Storedambwe-logo-v-1.0-03.png">
+              <img class="dambwe-logo" src="images/favicon.png">
               <img class="dambwe-mobile-logo" src="images/favicon.png">
             </a>
           </div>
