--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <meta name="theme-color" content="#464968">
     <title>Store Dambwe | SHOP</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -32,6 +35,7 @@
     </nav>
 
     <script type="module" src="scripts/farm.js"></script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
