Implement toast notifications for cart actions: show message on add/remove from cart

--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@
     </div>
   </div>
 </div>
-
+<div id="toast" class="toast"></div>
     <script type="module" src="scripts/checkout.js"></script>
 </body>
 </html>
