--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </div>
     </div>
 
+    <div id="toast" class="toast"></div>
+
+
 <a href="#" id="back-to-top"><i class="fas fa-chevron-up"></i> </a>
 <nav class="nav">
         
