--- a/auth/login.html
+++ b/auth/login.html
@@ -6,7 +6,7 @@
     <title>Storedambwe | Login</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="login-page">
     <div class="login-container">
         <div class="login-box">
             <div class="checkout-header-middle-section">
