--- a/auth/login.html
+++ b/auth/login.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Storedambwe | Login</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+
 </head>
 <body class="login-page">
     <div class="login-container">
