Add user profile image to signup, checkout, and view details pages

--- a/checkout.html
+++ b/checkout.html
@@ -24,7 +24,11 @@
       </div>
 
   <div class="checkout-header-right-section">
-    <i class="fa fa-lock"></i>
+    
+    <div class="user-profile">
+      <img src="images/pear.jpg" alt="" />
+  </div>
+    
   </div>
 </div>
 </div>
