--- a/view-details.html
+++ b/view-details.html
@@ -49,7 +49,13 @@
                     <span class="tooltip">More</span>
                 </a>
             </li>
+
+            <div class="checkout-header-right-section">
+                <div class="user-profile">
+                  <img src="images/pear.jpg" alt="" />
+              </div>
         </ul>
+        
     </div>
 
     <div id="toast" class="toast"></div>
