renaming files not justb some out of the blue names

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
     </nav>
 
-    <script type="module" src="scripts/farm.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
