--- a/auth/login.html
+++ b/auth/login.html
@@ -24,15 +24,15 @@
                 
                 <div class="input-group">
                     <i class="fas fa-lock"></i>
-                    <input type="password" placeholder="Password" required>
-                   <!-- <i class="fas fa-eye-slash toggle-password"></i> -->
+                    <input type="password" class="password-input" placeholder="Password" required>
+                    <i class="fas fa-eye-slash toggle-password"></i>
                 </div>
 
                 <div class="options">
                     <label>
                         <input type="checkbox"> Remember me
                     </label>
-                    <a href="#" class="forgot-password">Forgot password?</a>
+                    <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
                 </div>
 
                 <button type="submit" class="login-btn">Sign In</button>
@@ -43,5 +43,7 @@
             </form>
         </div>
     </div>
+
+    <script src="./js/auth.js"></script>
 </body>
 </html>
