--- a/checkout.html
+++ b/checkout.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="main">
-  <div class="page-title">Review your order</div>
+  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Review your order</div>
 
   <div class="checkout-grid">
     <div class="order-summary js-order-summary">         
