alot of changes from taking care of toaast animations for pages to restructuring the view details page to adding the categories section and giving it life ... we almost done with the usual stuff for the ui before we proceed to dashboard/content management system (cms) then backend and apis

--- a/view-details.html
+++ b/view-details.html
@@ -33,7 +33,7 @@
             <li>
                 <a href="#" class="nav-icon">
                     <i class="far fa-comment"></i>
-                    <span class="tooltip">Comment</span>
+                    <span class="tooltip">Reviews</span>
                 </a>
             </li>
             <li>
@@ -45,7 +45,7 @@
             <li>
                 <a href="checkout.html" class="nav-icon">
                    <i class="fas fa-shopping-cart"></i>
-                    <span class="tooltip">Cart</span>
+                    <span class="tooltip">View Your Cart</span>
                 </a>
             </li>
             <li>
