--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Store Dambwe | CHECKOUT</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 <body>
 
