--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Store Dambwe | SHOP</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 
 <body>
@@ -18,7 +20,12 @@
     <div class="hero">
 
     </div>
-
+    <div class="category">
+      <!--  <h2>CATEGORIES</h2> -->
+        <div class="category-grid js-categories-grid">
+            
+        </div>
+    </div>
     <div class="products">
         <div class="product-grid js-products-grid">
 
@@ -34,6 +41,8 @@
     </nav>
 
     <script type="module" src="scripts/index.js"></script>
+    <script src="scripts/categories.js"></script>
+
 </body>
 
 </html>
