Add multiple product entries to data.js with detailed descriptions and pricing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <div class="hero">
 
     </div>
-    <div class="category">
+
+    <div id="sticky-trigger"></div>
+
+    <div id="categories" class="category">
       <!--  <h2>CATEGORIES</h2> -->
         <div class="category-grid js-categories-grid">
             
