--- a/indexer.html
+++ b/indexer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <title>Store Dambwe | HOME</title>
+    <title>Storedambwe | HOME</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
