minor adjustments am slowly losing motivation

--- a/view-details.html
+++ b/view-details.html
@@ -27,13 +27,13 @@
             <li>
                 <a class="nav-icon" id="bookmarkBtn">
                     <i class="far fa-bookmark"></i>
-                    <span class="tooltip">Save</span>
+                    <span class="tooltip">Bookmark</span>
                 </a>
             </li>
             <li>
                 <a href="#" class="nav-icon">
                     <i class="far fa-comment"></i>
-                    <span class="tooltip">Reviews</span>
+                    <span class="tooltip">Message seller</span>
                 </a>
             </li>
             <li>
