commit commit and all auth edits and so on on categories tabs

--- a/auth/login.html
+++ b/auth/login.html
@@ -30,7 +30,7 @@
 
                 <div class="options">
                     <label>
-                        <input type="checkbox"> Remember me
+                        <input type="checkbox" required> Remember me
                     </label>
                     <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
                 </div>
