Update checkout and order summary: rename sections for clarity and adjust displayed dates for saved items

--- a/checkout.html
+++ b/checkout.html
@@ -21,7 +21,7 @@
           </div>
 
     <div class="checkout-header-middle-section">
-        Checkout (<a class="return-to-home-link js-return-to-home-link"
+        Saved List (<a class="return-to-home-link js-return-to-home-link"
           href="index.html"></a>)
       </div>
 
@@ -36,7 +36,7 @@
 </div>
 
 <div class="main">
-  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Review your order</div>
+  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Your Saved List Summery</div>
 
   <div class="checkout-grid">
     <div class="order-summary js-order-summary">         
