--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,7 @@
     <div class="checkout-header-middle-section">
         Saved List (<a class="return-to-home-link js-return-to-home-link"
           href="index.html"></a>)
-      </div>
+    </div>
 
   <div class="checkout-header-right-section">
     
@@ -36,7 +36,9 @@
 </div>
 
 <div class="main">
-  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Your Saved List Summery</div>
+  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Your Saved List Summery  <button id="clear-cart-btn" class="clear-cart-btn">
+          <i class="fa fa-trash"></i> Delete All
+        </button></div>
 
   <div class="checkout-grid">
     <div class="order-summary js-order-summary">         
@@ -54,8 +56,8 @@
     <span class="modal-close" id="modal-close-btn">&times;</span>
     <div class="modal-body">
       <i class="fa fa-trash"></i>
-      <h3>Remove Item?</h3>
-      <p>Are you sure you want to remove this item from your saved list?</p>
+      <h3 id="modal-title">Remove Item?</h3>
+      <p id="modal-message">Are you sure you want to remove this item from your saved list?</p>
       <div class="modal-buttons">
         <button id="modal-confirm-btn" class="modal-confirm-btn">Delete</button>
         <button id="modal-cancel-btn" class="modal-cancel-btn">Cancel</button>
