Enhance cart functionality: implement toggle for delete button visibility and update cart quantity display in order summary

--- a/checkout.html
+++ b/checkout.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="main">
-  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Your Saved List Summery  <button id="clear-cart-btn" class="clear-cart-btn">
+  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Your Saved List Summery  <button id="clear-cart-btn" class="clear-cart-btn" style="display:none;">
           <i class="fa fa-trash"></i> Delete All
         </button></div>
 
