Refactor user profile display: replace image with Font Awesome icon for consistency across pages

--- a/checkout.html
+++ b/checkout.html
@@ -27,8 +27,10 @@
 
   <div class="checkout-header-right-section">
     
-    <div class="user-profile">
-      <img src="images/pear.jpg" alt="" />
+    <a href="dashboard/index.html">
+               <div class="fa-solid fa-user"> </div>
+            </a>
+  
   </div>
     
   </div>
