--- a/view-details.html
+++ b/view-details.html
@@ -49,9 +49,9 @@
                 </a>
             </li>
             <li>
-                <div class="user-profile">
-                    <img src="images/pear.jpg" alt="User Profile" />
-                </div>
+                <a href="dashboard/index.html">
+               <div class="fa-solid fa-user"> </div>
+            </a>
             </li>
         </ul>
     </div>
