--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -50,9 +50,14 @@
                 </div>
                 <div class="dashboard-header-right-section">
     
+                    <!--
                     <div class="user-profile">
                         <img src="../images/pear.jpg" alt="" />
                     </div>
+                -->
+                    <a href="dashboard/index.html">
+               <div class="fa-solid fa-user"> </div>
+            </a>
     
                 </div>
             </div>
