Refactor product link in hero section: update hero_link to point to the products section for improved navigation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         </div>
     </div>
-    <div class="products">
+    <div class="products" id="products">
         <div class="product-grid js-products-grid">
 
         </div>
