Implement login form submission and redirect: add event listener to handle form submission and store login state in localStorage ine nde am still working on this bs and it wpnt seem to work

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/dashboard-styles.css">
 </head>
 <body>
+    <script>
+        if (localStorage.getItem('isLoggedIn') !== 'true') {
+            window.location.href = '../auth/login.html'; // Corrected path
+        }
+    </script>
 
     <div class="dashboard-header">
         <div class="header-content">
@@ -62,5 +67,6 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 </html>
