Update icon in navigation links to gauge icon for consistency across pages

--- a/checkout.html
+++ b/checkout.html
@@ -28,7 +28,7 @@
   <div class="checkout-header-right-section">
     
     <a href="dashboard/index.html">
-               <div class="fa-solid fa-user"> </div>
+               <div class="fa-solid fa-gauge"> </div>
             </a>
   
   </div>
