--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -61,7 +61,7 @@
                     </div>
                 -->
                     <a href="dashboard/index.html">
-               <div class="fa-solid fa-user"> </div>
+               <div class="fa-solid fa-gauge"> </div>
             </a>
     
                 </div>
