--- a/view-details.html
+++ b/view-details.html
@@ -50,7 +50,7 @@
             </li>
             <li>
                 <a href="dashboard/index.html">
-               <div class="fa-solid fa-user"> </div>
+               <div class="fa-solid fa-gauge"> </div>
             </a>
             </li>
         </ul>
