--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,7 @@
     <title>Storedambwe | CHECKOUT</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="css/dashboard-loading.css">
    
 </head>
 <body>
@@ -27,7 +28,7 @@
 
   <div class="checkout-header-right-section">
     
-    <a href="dashboard/index.html">
+    <a href="dashboard/index.html" class="js-dashboard-link">
                <div class="fa-solid fa-gauge"> </div>
             </a>
   
@@ -67,6 +68,40 @@
     </div>
   </div>
 </div>
+
+<!-- Centralised Loading Indicator -->
+<div id="dashboard-loading-screen" class="dashboard-loading-screen">
+  <div class="dashboard-loading-content">
+    <div class="loader">
+      <svg width="48" height="48" viewBox="0 0 50 50">
+        <circle cx="25" cy="25" r="20" fill="none" stroke="#007bff" stroke-width="5" stroke-linecap="round" stroke-dasharray="31.4 31.4" transform="rotate(-90 25 25)">
+          <animateTransform attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="1s" repeatCount="indefinite"/>
+        </circle>
+      </svg>
+    </div>
+    <div class="dashboard-loading-message">
+      <strong>Login Required</strong><br>
+      You must log in before accessing the dashboard.<br>
+      Redirecting you to the login page...
+    </div>
+  </div>
+</div>
+
     <script type="module" src="scripts/checkout.js"></script>
+    <script>
+      // Centralised dashboard loading handler for all .js-dashboard-link
+      document.querySelectorAll('.js-dashboard-link').forEach(link => {
+        link.addEventListener('click', function(e) {
+          e.preventDefault();
+          const loadingScreen = document.getElementById('dashboard-loading-screen');
+          if (loadingScreen) {
+            loadingScreen.style.display = 'flex';
+          }
+          setTimeout(() => {
+            window.location.href = link.getAttribute('href');
+          }, 1200);
+        });
+      });
+    </script>
 </body>
 </html>
