Add sidebar navigation structure and logic: create dashboard-data.js for sidebar items, update index.html for navigation links, and refactor dashboard.js to import sidebar items.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <title>Storedambwe | DASHBOARD</title>
     <link rel="stylesheet" href="./css/my-products.css">
     <link rel="stylesheet" href="../css/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
@@ -21,17 +22,29 @@
                     </div>
                 </div>
             </div>
-            <ul class="sidebar-list"></ul>
+            <!--- here is whwere we palce our navigation links -->
+            <ul class="sidebar-list">
+
+            </ul>
+
             <div class="account-info">
+
                 <a href="#" data-section="profile" class="nav-icon">
-                    <div class="account-info-name"><span id="username"></span></div>
+                    <div class="account-info-name far fa-user-circle">
+                        <span id="username"></span>
+                    </div>
                 </a>
+
                 <button class="account-info-more">
                     <i class="fa-solid fa-ellipsis-h"></i>
                 </button>
             </div>
         </div>
-        <div class="app-content"></div>
+
+        <div class="app-content">
+
+        </div>
+
     </div>
 </body>
 <script type="module" src="./js/dashboard.js"></script>
