Update account info styling: increase font size for account name and adjust user icon class for better visual consistency.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -30,15 +30,14 @@
             <div class="account-info">
 
                 <a href="#" data-section="profile" class="nav-icon">
-                    <div class="account-info-name far fa-user-circle">
+                    <div class="account-info-name fa fa-user">
                         <span id="username"></span>
                     </div>
                 </a>
-
-                <button class="account-info-more">
-                    <i class="fa-solid fa-ellipsis-h"></i>
-                </button>
+                
             </div>
+
+          
         </div>
 
         <div class="app-content">
