Refactor product and category filtering: add status filtering functionality, update icons for consistency, and enhance grid layout responsiveness.

--- a/view-details.html
+++ b/view-details.html
@@ -44,7 +44,7 @@
             </li>
             <li>
                 <a href="checkout.html" class="nav-icon">
-                   <i class="fas fa-shopping-cart"></i>
+                   <i class="fas fa-bag-shopping"></i>
                     <span class="tooltip">View Your Cart</span>
                 </a>
             </li>
@@ -59,7 +59,7 @@
     <div id="toast" class="toast"></div>
 
     <div class="product-details animate__animated animate__fadeIn" id="productDetails">
-        <!-- Content will be loaded dynamically -->
+        
     </div>
 
     <script type="module" src="scripts/view-details.js"></script>
