--- a/checkout.html
+++ b/checkout.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="main">
-  <div class="page-title"> <i class="fa-solid fa-cart-shopping"></i> Your Saved List Summery  <button id="clear-cart-btn" class="clear-cart-btn" style="display:none;">
+  <div class="page-title"> <i class="fa-solid fa-bag-shopping"></i> Your Saved List Summery  <button id="clear-cart-btn" class="clear-cart-btn" style="display:none;">
           <i class="fa fa-trash"></i> Delete All
         </button></div>
 
