Implement filter functionality: add localStorage support for category and status filters, update UI on filter changes, and refactor related functions for clarity.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -46,7 +46,7 @@
 
     </div>
 </body>
-<script type="module" src="./js/dashboard.js"></script>
+<script type="module" src="./js/dashboard-init.js"></script>
 <script src="./js/my-products.js"></script>
 <script src="./js/logout.js"></script>
 <script src="./js/check-session.js"></script>
